--- a/Pruebas.html
+++ b/Pruebas.html
@@ -5,32 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./Pruebas.css"
+    <link rel="stylesheet" href="./LandingPage.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>Pruebas</title>
 </head>
 <body style="background-color: antiquewhite;">
 
-  <div style="background-color: aliceblue;" class="container">
+  <div style="width: 960px;" class="container  text-center">
+    <h2 class="display-4">Instagram <i class="bi bi-instagram"></i></h2>
+    <a href="https://instagram.com/nexusnoticias?utm_medium=copy_link" class="lead NoLink-B">@nexusnoticias</a>
     <div class="row row-cols-3">
-      <div class="col">
-        <img class="ImageSize" src="./Images/PublicacionesIg/PI1.jpeg" alt="Publicacion de instagram">
+    <!--Imagen-->
+      <div class="col ColSize">
+        <!--Bloque de imagen con efecto-->
+        <div class="ImageContainer">
+          <img class="ImageSize" src="./images/PublicacionesIg/PI1.jpeg" alt="Publicacion de instagram">
+          <a href="https://instagram.com/nexusnoticias?utm_medium=copy_link">
+            <div class="overplay">
+              <div class="icon"><i class="bi bi-instagram iconSize"></i></div>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="col">
-        <img class="ImageSize" src="./Images/PublicacionesIg/PI2.jpeg" alt="Publicacion de instagram">
+
+      <div class="col ColSize">
+        <div class="ImageContainer">
+          <img class="ImageSize" src="./images/PublicacionesIg/PI2.jpeg" alt="Publicacion de instagram">
+          <a href="https://instagram.com/nexusnoticias?utm_medium=copy_link">
+            <div class="overplay">
+              <div class="icon"><i class="bi bi-instagram iconSize"></i></div>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="col">
-        <img class="ImageSize" src="./Images/PublicacionesIg/PI3.jpeg" alt="Publicacion de instagram">
+
+      <div class="col ColSize">
+        <div class="ImageContainer">
+          <img class="ImageSize" src="./images/PublicacionesIg/PI3.jpeg" alt="Publicacion de instagram">
+          <a href="https://instagram.com/nexusnoticias?utm_medium=copy_link">
+            <div class="overplay">
+              <div class="icon"><i class="bi bi-instagram iconSize"></i></div>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="col">
-        <img class="ImageSize" src="./Images/PublicacionesIg/PI4.jpeg" alt="Publicacion de instagram">
+
+      <div class="col ColSize">
+        <div class="ImageContainer">
+          <img class="ImageSize" src="./images/PublicacionesIg/PI4.jpeg" alt="Publicacion de instagram">
+          <a href="https://instagram.com/nexusnoticias?utm_medium=copy_link">
+            <div class="overplay">
+              <div class="icon"><i class="bi bi-instagram iconSize"></i></div>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="col">
-        <img class="ImageSize" src="./Images/PublicacionesIg/PI5.jpeg" alt="Publicacion de instagram">
+
+      <div class="col ColSize">
+        <div class="ImageContainer">
+          <img class="ImageSize" src="./images/PublicacionesIg/PI5.jpeg" alt="Publicacion de instagram">
+          <a href="https://instagram.com/nexusnoticias?utm_medium=copy_link">
+            <div class="overplay">
+              <div class="icon"><i class="bi bi-instagram iconSize"></i></div>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="col">
-        <img class="ImageSize" src="./Images/PublicacionesIg/PI6.jpeg" alt="Publicacion de instagram">
+
+      <div class="col ColSize">
+        <div class="ImageContainer">
+          <img class="ImageSize" src="./images/PublicacionesIg/PI6.jpeg" alt="Publicacion de instagram">
+          <a href="https://instagram.com/nexusnoticias?utm_medium=copy_link">
+            <div class="overplay">
+              <div class="icon"><i class="bi bi-instagram iconSize"></i></div>
+            </div>
+          </a>
+        </div>
       </div>
+
     </div>
   </div>
+
+ 
 </body>
 </html> 
