Put the instagram widget in the Lamdingpage

--- a/Pruebas.html
+++ b/Pruebas.html
@@ -75,7 +75,7 @@
 
       <div class="col ColSize">
         <div class="ImageContainer">
-          <img class="ImageSize" src="./images/PublicacionesIg/PI6.jpeg" alt="Publicacion de instagram">
+          <blockquote class="tiktok-embed ImageSize" cite="https://www.tiktok.com/@realmadrid/video/7073453703180684546" data-video-id="7073453703180684546" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@realmadrid" href="https://www.tiktok.com/@realmadrid">@realmadrid</a> 🤩 ¡QUÉ SUBIDÓN! PURE PASSION! <a title="realmadrid" target="_blank" href="https://www.tiktok.com/tag/realmadrid">#realmadrid</a> <a title="realmadrid" target="_blank" href="https://www.tiktok.com/tag/realmadrid">#realmadrid</a> <a title="fyp" target="_blank" href="https://www.tiktok.com/tag/fyp">#fyp</a> <a title="fypシ" target="_blank" href="https://www.tiktok.com/tag/fyp%E3%82%B7">#fypシ</a> <a title="fy" target="_blank" href="https://www.tiktok.com/tag/fy">#fy</a> <a title="foryou" target="_blank" href="https://www.tiktok.com/tag/foryou">#foryou</a> <a title="football" target="_blank" href="https://www.tiktok.com/tag/football">#football</a> <a title="fútbol" target="_blank" href="https://www.tiktok.com/tag/f%C3%BAtbol">#fútbol</a> <a target="_blank" title="♬ original sound - Real Madrid C.F." href="https://www.tiktok.com/music/original-sound-7073453792393464578">♬ original sound - Real Madrid C.F.</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
           <a href="https://instagram.com/nexusnoticias?utm_medium=copy_link">
             <div class="overplay">
               <div class="icon"><i class="bi bi-instagram iconSize"></i></div>
